# transformers

./: .gitignore  .pre-commit-config.yaml  README.md  blocks.py  eval.py  generate.py  gpt.py  pyproject.toml  tokenization.py  tokenizer.py  train_gpt.py  transformer.py
cpp/: NeuralNetwork.cpp  NeuralNetwork.hpp  test.cpp
data_prep/: download_cc_data.sh  exp_cc.py
src/: benchmark.py  blocks.py  generate.py  gpt.py  pretokenize.py  tokenization.py  tokenizer.py  train_gpt.py  transformer.py
transformers_from_scratch/: 0_genesis_dataset.ipynb  0_genesis_model.ipynb  YT_Alpaca_7B_LoRa.ipynb  eval.py  model.py  tokenization.py  train.py  transformer-from-scratch-using-pytorch.ipynb
transformers_from_scratch/cpp/: NeuralNetwork.hpp  test  test.cpp
transformers_from_scratch/toy_data/: example.txt
