[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformers_from_scratch"
version = "0.1.0"
description = "in this project we will implement transformers from scratch"
authors = [{ name = "Maskedpirate", email = "muratcan.kurtulus@gmail.com" }]
dependencies = ["torch==2.4.1", "pydantic", "joblib", "regex", "tqdm", "flash-attn"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.codespell]
skip = "toy_data/*"
